src/components/signup/stepOne/account.scss
body {
  overflow: auto; 
  height: 150%;
}

.account-wrapper {
  display: flex;
  width: 100vw;
  height: 150%;
}

.image-container {
  flex: 1;
  max-width: 700px;
  height: 100%;
  display: block;
  background: #F5F0EC;
  justify-content: center;
  text-align: center;
  padding-top: 50px;
}

.image {
  width: 556px;
  height: 720px;
  border-radius: 30px;
}


.account-container {
  overflow-y: auto;
  flex: 1;
  max-width: 484px;
  height: 140%;
  gap: 56px;
  margin-left: 3.875rem;
  margin-top: 4.475rem;
  background-color: #FFF;
  position: relative;
}


.account-container::-webkit-scrollbar {
  width: 0;
  background: transparent;
}


.account-form {
  overflow-y: auto;
  overflow-x: hidden;
  box-sizing: border-box;
  width: 100%;
  height: 121%;
  gap: 40px;
}


.account-form::-webkit-scrollbar {
  width: 0;
  background: transparent;
}


@media (max-width: 768px) {
  .account-wrapper {
    justify-content: center;
    align-items: center;
    height: 150%;
    overflow-x: hidden;
    overflow-y: auto;
    overflow-x: hidden;
  }

  .image-container {
    display: none;
  }

  .account-container {
    max-width: 404px;
    width: 140%;
    height: fit-content;
    gap: 24px;
    margin: 0 auto;
    padding: 0;
    background-color: #FFF;
    box-sizing: border-box;
    overflow-y: auto;
    overflow-x: hidden;
  }

  .account-form {
    overflow-y: auto;
    overflow-x: hidden;
    margin-left: 0;
    width: 150%;
    height: 130%;
  }
}


h1 {
  font-size: 2rem;
  margin-bottom: 0.5rem;
}

p {
  color: #6c757d;
  margin-bottom: 1rem;
}

.btn-login {
  background-color: #75C799;
  color: white;
  width: 100%;
  padding: 0.75rem;
  border: none;
  margin-top: 1rem;
}

.btn-login:hover {
  background-color: #66b88d;
  outline: none;
  box-shadow: none;
}

.forgot-password {
  display: block;
  text-align: right;
  color: #429875;
  margin-top: -1.5rem;
  margin-bottom: 1.5rem;
  text-decoration: none;
}

.sign-up-link {
  text-align: center;
  margin-top: 1rem;

  a {
    color: #429875;
    text-decoration: none;
  }
}

.remember-me-group {
  margin-top: 1rem;
}

.lat {
  font-size: 10px;
  color: #667085;
  margin-top: 0;
}

.form-row {
  display: flex;
  gap: 45px;
}

.gender-options {
  display: flex;
  gap: 5px;
  margin-bottom: 0;
  padding-bottom: 0;

  label {
    font-size: 14px;
  }

  input[type="radio"] {
    margin-right: 5px;
  }
}

h2 {
  font-size: 24px;
  margin-bottom: 20px;
}

p {
  font-size: 16px;
  margin-bottom: 20px;
}

.buttons {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-top: 1px;
}

.buttons .back {
  width: 45%;
  height: 44px;
  padding: 10px 18px;
  border-radius: 8px;
  border: 1px solid #EAECF0;
  background: #FFFFFF;
  color: #344054;
  text-align: center;
}

.buttons .continue {
  width: 50%;
  height: 44px;
  padding: 10px 18px;
  color: #fff;
  background-color: #36b37e;
  border-radius: 8px;
  border: 1px solid #EAECF0;
  text-align: center;
}

.form-group {
  width: 388px;
  height: 66px;
  gap: 6px;
}

.inputs {
  width: 360px;
  height: 24px;
  gap: 8px;
}

